# SSP-MMC-FSRS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  notebook.ipynb  notebook.nbconvert.ipynb  pyproject.toml  simulator.py
bench/: README.md  SPEEDUP_LOG.md  _common.py  bench_variant.py  iter0_reference.json  run_iteration.py
bench7/: SPEEDUP_LOG7.md  _common7.py  _pvariant.py  bench_variant7.py  iter0_reference.json  run_iteration7.py  validate_parallel.py
docs/: scheduling_policies_comparison.md
experiments/: accel_bench7.py  converge7.py  grid_accuracy7.py  grid_dcoarse7.py  grid_dcoarser7.py  grid_hybrid7.py  grid_sgrid7.py  grid_spotcheck7.py  hyperparameter_optimizer7.py  lib.py  nsga_explore7.py  profile_pipeline.py  train_gru_per_user.py
rust/: Cargo.toml  pyproject.toml
rust/.cargo/: config.toml
rust/src/: fastmath.rs  lib.rs  rng.rs  simulate.rs  simulate7.rs  solver7.rs
src/ssp_mmc_fsrs/: adr.py  fsrs7.py  gru.py  marc.py  policies7.py  shared_rng.py  simulation.py  simulation7.py  solver7.py
tests/: bench_simulate.py  bench_solver7_batched.py  inverse_speedup_study.py  newton_steps_study.py  sshort_range_study.py  test_adr_marc_smoke.py  test_fsrs7_area.py  test_fsrs7_parity.py  test_gru_step_parity.py  test_gru_weight_sanity.py  test_rng_parity.py  test_simulate7_gru.py  test_simulate7_parity.py  test_simulate7_peruser.py  test_simulate7_sanity.py  test_simulate_parity.py  test_solver7_kernel_parity.py  test_solver7_mpi_parity.py  test_solver7_smoke.py
